ajustes da base endereco e cirurgia ortognatica

--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -294,7 +294,7 @@
         <div class="info-tratamento-base">
           <div class="tratamento-base-left p-10">
             <div class="content-tratamentoBase-left">
-              <h2>Cirurgia Ortognática</h2>
+              <h2>cirurgia Ortognatica</h2>
               <p>
                 É um tratamento indicado para pessoas que têm deformidades
                 envolvendo os ossos da face e os dentes, visando restabelecer o
@@ -303,6 +303,27 @@
                 está no tamanho dos ossos do esqueleto e não somente na posição
                 dos dentes, faz-se necessário uma correção óssea.
               </p>
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base invisalign-left">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
               <p>
                 As deformidades dos ossos da face podem se originar de
                 distúrbios de crescimento, síndromes e anomalias específicas,
@@ -321,6 +342,28 @@
                 em articulador; opera-se o paciente e, logo que se recupere, a
                 ortodontia realizará os últimos ajustes na oclusão.
               </p>
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+                class="ml-2"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
               <p>
                 Antes da cirurgia, o paciente deverá realizar alguns exames
                 complementares. A cirurgia é realizada em ambiente hospitalar e
@@ -341,16 +384,9 @@
             </div>
           </div>
           <div class="tratamentoBase-right">
-            <div
-              class="img-right-tratamentoBase"
-              style="
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              "
-            >
+            <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Restauração-Dentária-Vila-Olímpia (1).jpg"
+                src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
                 alt=""
                 width="1000"
                 height="667"
@@ -409,33 +445,40 @@
         </div>
       </section>
 
-      <section class="s-localizacao">
-        <div class="container">
-          <div class="info-localizacao">
-            <div class="left-localizacao">
-              <h2>Localização</h2>
-              <div class="info-left-localizacao">
-                <h3>Endereço</h3>
-                <p>R. Funchal, 551 - 8º Andar - CJ 81</p>
-                <p>Vila Olímpia, São Paulo - SP</p>
-                <p>CEP: 04551-060</p>
+      <section class="s-contato" style="margin-top: -5rem">
+        <div class="box-contato">
+          <div class="container">
+            <div class="info-contato">
+              <div class="info-contato-left" style="margin: auto 0">
+                <h1 style="font-size: 29px">Localização</h1>
+                <div class="conteudo-contato-left">
+                  <h3>Endereço</h3>
+                  <p>R. Funchal, 551 - 8º Andar - CJ 81</p>
+                  <p>Vila Olímpia, São Paulo - SP</p>
+                  <p>CEP: 04551-060</p>
+                </div>
+                <div class="number-left-localizacao" style="padding: 5rem 0">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                    onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+                  >
+                    <i class="fa-brands fa-whatsapp"></i> Ver Número</a
+                  >
+                </div>
               </div>
-              <div class="number-left-localizacao">
-                <a href=""> <i class="fa-brands fa-whatsapp"></i> Ver Número</a>
-              </div>
-            </div>
-            <div class="right-localizacao">
-              <div class="info-left-localizacao">
-                <div class="localizacao-mapa">
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus"
-                    width="600"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
+              <div class="info-contato-right">
+                <div class="conteudo-contato-right">
+                  <div class="contato-mapa">
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus"
+                      width="600"
+                      height="450"
+                      style="border: 0"
+                      allowfullscreen=""
+                      loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"
+                    ></iframe>
+                  </div>
                 </div>
               </div>
             </div>
