--- a/src/index.html
+++ b/src/index.html
@@ -392,7 +392,11 @@
                 nossos pacientes o que a de melhor e mais moderno na
                 odontologia.
               </p>
-              <a href="" class="agendarIndex" style="color: #fff"
+              <a
+                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+                class="agendarIndex"
+                style="color: #fff"
                 >Agendar consulta</a
               >
             </div>
@@ -519,33 +523,40 @@
         </div>
       </section>
 
-      <section class="s-localizacao">
-        <div class="container">
-          <div class="info-localizacao">
-            <div class="left-localizacao">
-              <h2>Localização</h2>
-              <div class="info-left-localizacao">
-                <h3>Endereço</h3>
-                <p>R. Funchal, 551 - 8º Andar - CJ 81</p>
-                <p>Vila Olímpia, São Paulo - SP</p>
-                <p>CEP: 04551-060</p>
+      <section class="s-contato" style="margin-top: -5rem">
+        <div class="box-contato">
+          <div class="container">
+            <div class="info-contato">
+              <div class="info-contato-left" style="margin: auto 0">
+                <h1 style="font-size: 29px">Localização</h1>
+                <div class="conteudo-contato-left">
+                  <h3>Endereço</h3>
+                  <p>R. Funchal, 551 - 8º Andar - CJ 81</p>
+                  <p>Vila Olímpia, São Paulo - SP</p>
+                  <p>CEP: 04551-060</p>
+                </div>
+                <div class="number-left-localizacao" style="padding: 5rem 0">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                    onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+                  >
+                    <i class="fa-brands fa-whatsapp"></i> Ver Número</a
+                  >
+                </div>
               </div>
-              <div class="number-left-localizacao">
-                <a href=""> <i class="fa-brands fa-whatsapp"></i> Ver Número</a>
-              </div>
-            </div>
-            <div class="right-localizacao">
-              <div class="info-left-localizacao">
-                <div class="localizacao-mapa">
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus"
-                    width="600"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
+              <div class="info-contato-right">
+                <div class="conteudo-contato-right">
+                  <div class="contato-mapa">
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus"
+                      width="600"
+                      height="450"
+                      style="border: 0"
+                      allowfullscreen=""
+                      loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"
+                    ></iframe>
+                  </div>
                 </div>
               </div>
             </div>
