--- a/src/lente-de-contato-dental.html
+++ b/src/lente-de-contato-dental.html
@@ -325,16 +325,43 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Marina-Ferreira-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Mariana Ferreira Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Aline Dias de Moraes</span>
-              <p>Ortodontia - CROSP 83958</p>
+              <span>Dra. Mariana Ferreira</span>
+              <p>Clínica Geral - Harmonizção Facial - CROSP 126457</p>
             </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Isabella-Louzada-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Isabella Louzada Nogueira Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Isabella Louzada</span>
+              <p>Prótese e Estética- CROSP 116035</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Fabia-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Fabia Piccoli Lobo Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Fabia Piccoli Lobo</span>
+              <p>Estética e Prótese - CROSP 55530</p>
+            </div>
+
+          </div>
+
+          <div class="equipe-info">
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
@@ -345,15 +372,40 @@
               <span>Dra. Maria Goreti Nogueira</span>
               <p>Estética, Dentista e Reabilitação - CROSP 34420</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Fernanda Natrieli</span>
-              <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
+              <span>Dra. Vitoria Zaparoli Calisto</span>
+              <p>Clinica Geral - CROSP 141235</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Caroline Bernardo Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Caroline Bernardo</span>
+              <p>Estética e Prótese - CROSP 12131</p>
+            </div>
+          </div>
+
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Julia-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Julia Teixeira Costa Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Julia Teixeira Costa</span>
+              <p>Clinica Geral - CROSP 157327</p>
             </div>
           </div>
         </div>
@@ -431,6 +483,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -465,6 +523,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
