--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -399,37 +399,35 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dr. André Sakima Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Aline Dias de Moraes</span>
-              <p>Ortodontia - CROSP 83958</p>
+              <span>Dr. André Sakima</span>
+              <p>
+                Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial -
+                CROSP 66494
+              </p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Maria Goreti Nogueira</span>
-              <p>Estética, Dentista e Reabilitação - CROSP 34420</p>
+              <span>Dra. Amanda Zarpellon</span>
+              <p>Buco-Maxilo - CROSP 107223</p>
             </div>
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Fernanda Natrieli</span>
-              <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
-            </div>
+            
           </div>
+
+          
         </div>
       </section>
 
@@ -506,6 +504,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -539,6 +543,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
