--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -333,7 +333,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
                 />
               </div>
@@ -436,6 +436,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -468,6 +474,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
