--- a/src/dentes-do-siso.html
+++ b/src/dentes-do-siso.html
@@ -332,35 +332,54 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Aline Dias de Moraes</span>
-              <p>Ortodontia - CROSP 83958</p>
+              <span>Dra. Paloma Valenzuela</span>
+              <p>Implante Dentário e Clínica Geral - CROSP 118123</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Maria Goreti Nogueira</span>
-              <p>Estética, Dentista e Reabilitação - CROSP 34420</p>
+              <span>Dra. Amanda Zarpellon</span>
+              <p>Buco-Maxilo - CROSP 107223</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Mariana-Araujo-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Mariana Pereira Araujo Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Fernanda Natrieli</span>
-              <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
+              <span>Dra. Mariana Pereira Araujo</span>
+              <p>Buco-Maxilo - CROSP 140004</p>
+            </div>   
+          </div>
+
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dr-Andre-Sakima-Dentista-Vila-Olimpia.webp"
+                  alt="Foto da Dr. André Sakima Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dr. André Sakima</span>
+              <p>
+                Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial -
+                CROSP 66494
+              </p>
             </div>
           </div>
         </div>
@@ -438,6 +457,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -472,6 +497,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
