--- a/src/header.html
+++ b/src/header.html
@@ -439,7 +439,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
                 />
               </div>
@@ -536,6 +536,12 @@
               ></a>
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
               ></a>
             </div>
             <div class="endereco-footer">
