--- a/src/ortodontia.html
+++ b/src/ortodontia.html
@@ -401,37 +401,68 @@
       <section class="s-equipe">
         <div class="container">
           <h2>Equipe</h2>
+
           <div class="equipe-info">
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Aline Dias de Moraes</span>
               <p>Ortodontia - CROSP 83958</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Gabrielle Feitoza Bassi Costa Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Maria Goreti Nogueira</span>
-              <p>Estética, Dentista e Reabilitação - CROSP 34420</p>
+              <span>Dra. Gabrielle Feitoza Bassi Costa</span>
+              <p>Ortodontia - CROSP 45723</p>
             </div>
+
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Carolina-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Carolina Popp Leme Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Fernanda Natrieli</span>
-              <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
+              <span>Dra. Carolina Popp Leme</span>
+              <p>Ortodontia - CROSP 124782</p>
             </div>
+
+            
+          </div>
+          <div class="equipe-info">
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Kamilla-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Kamilla Andrade Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Kamilla Andrade</span>
+              <p>Clinica Greal - CROSP 144720</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/dra-Bruna-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Brunna Helloisa Souza  Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Brunna Helloisa Souza </span>
+              <p>Clinica Greal - CROSP 141324</p>
+            </div>
+            
           </div>
         </div>
       </section>
@@ -508,6 +539,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -541,6 +578,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
