--- a/src/tratamento-da-gengiva.html
+++ b/src/tratamento-da-gengiva.html
@@ -350,36 +350,18 @@
         <div class="container">
           <h2>Equipe</h2>
           <div class="equipe-info">
+            
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/dra-Aline-Dias-De-Moraes-Dentista-Vila-Olimpia.webp"
-                  alt="Foto da Dra. Aline Dias Moraes Dentista Vila Olímpia"
+                  src="./resources/img/curriculo/Dra-Denize-Gregorio-Takemura-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Denize Gregório Takemura Dentista Vila Olímpia"
                 />
               </div>
-              <span>Dra. Aline Dias de Moraes</span>
-              <p>Ortodontia - CROSP 83958</p>
+              <span>Dra. Denize Gregorio Takemura</span>
+              <p>Periodontia - CROSP 34471</p>
             </div>
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Maria Goreti Nogueira</span>
-              <p>Estética, Dentista e Reabilitação - CROSP 34420</p>
-            </div>
-            <div class="equipe-curriculo">
-              <div class="img-curriculo">
-                <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
-                  alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
-                />
-              </div>
-              <span>Dra. Fernanda Natrieli</span>
-              <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
-            </div>
+
           </div>
         </div>
       </section>
@@ -456,6 +438,12 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
+              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="./blog.html"
+                ><i class="fa-brands fa-blogger"></i
+              ></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
@@ -489,6 +477,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
 
-    <script src="./resources/js/apiGoogle2.js"></script>
+    <script src="./resources/js/apiGoogle.js"></script>
   </body>
 </html>
